# cluster

./: .gitignore  CMakeLists.txt  README.md  Rpi Research.md  cluster.c  cluster.h  cluster_crowd_computing.md  node.c  node.h  room.dwm  types.h
cli_utils/: pom.xml
cli_utils/src/main/java/com/github/meshotron2/cli_utils/: CLI.java
cli_utils/src/main/java/com/github/meshotron2/cli_utils/exceptions/: CLIException.java  MenuException.java
cli_utils/src/main/java/com/github/meshotron2/cli_utils/menu/: Menu.java
cli_utils/src/main/java/com/github/meshotron2/cli_utils/menu/input/: Input.java  NumericInput.java
cluster/: .gitignore  CMakeLists.txt  cluster  cluster.c  cluster.h  node.c  node.h  types.h
desktop/: .gitignore
desktop/src/: CMakeLists.txt  app.c  app.h  room.dwm  types.h
desktop/src/common/: types.h
desktop/src/room_creator/: app.c
desktop/src/room_partitioner/: CMakeLists.txt  room_partitioner.c
old/cli_utils/src/main/java/com/github/meshotron2/cli_utils/menu/: Formatter.java
old/desktop/: .gitignore
old/desktop/src/common/: common.h
old/desktop/src/room_creator/: CMakeLists.txt  app.c  app.h
old/desktop/src/room_partitioner/: room_partitioner.c  room_partitioner.h
old/research/: ModosDeComunicação.md  software_MPI.md
old/room_partitioner/: pom.xml  room.dwm  room_7.dwm  to_text.py
research/: ModosDeComunicação.md  cluster_crowd_computing.md
room_creator/: pom.xml  room.dwm
room_creator/src/main/java/com/github/meshotron2/room_creator/: Room.java
room_partitioner/: pom.xml
room_partitioner/src/main/java/com/github/meshotron2/room_partitioner/: Main.java
room_partitioner/src/main/java/com/github/meshotron2/room_partitioner/cli/: MainMenu.java  PartitionerInputSequence.java
room_partitioner/src/main/java/com/github/meshotron2/room_partitioner/partitioner/: Partitioner.java  Room.java
(+3 files in other folders)
